Додано заготовку до задачі 4.2.2 на мові програмування Python.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Java/DecoratorString/.idea/
 Java/DecoratorString/out/
 
 /lectures/lect4/UsbLib/src/META-INF
+/Python/labs/lab4/task_2_2/__pycache__
