РОзв'язок до теми відвідувач

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Java/DecoratorString/out/
 /lectures/lect4/UsbLib/src/META-INF
 /Python/labs/lab4/task_2_2/__pycache__
 /Java/lectures/lect4/UsbLib/src/META-INF
+/Python/labs/lab23_Visitor/task_3_2 - solution/__pycache__
