--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 *.iml
 Java/DecoratorString/.idea/
 Java/DecoratorString/out/
+*.pyc
+
 
 /lectures/lect4/UsbLib/src/META-INF
-/Python/labs/lab4/task_2_2/__pycache__
 /Java/lectures/lect4/UsbLib/src/META-INF
-/Python/labs/lab23_Visitor/task_3_2 - solution/__pycache__
